[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/arthur.gd" type="Script" id=1]
[ext_resource path="res://scripts/arthurSM.gd" type="Script" id=2]
[ext_resource path="res://sprites/arthur.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "eating"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23, 22, 23, 22, 23, 22, 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "fall"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}

[sub_resource type="Animation" id=3]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}

[sub_resource type="Animation" id=4]
length = 2.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 5 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4.70894, 8.87854 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 114.252, 26.7063 )

[node name="arthur" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="arthur_sm" type="Node" parent="."]
script = ExtResource( 2 )

[node name="anim" type="AnimationPlayer" parent="."]
playback_speed = 3.0
anims/eating = SubResource( 1 )
anims/fall = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( -0.735077, -0.735092 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
vframes = 4
hframes = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.340561, -7.83935 )
scale = Vector2( 3, 3.143 )
shape = SubResource( 5 )
one_way_collision_margin = 0.0

[node name="sound" type="AudioStreamPlayer2D" parent="."]
volume_db = -23.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.70282, -6.44899 )
shape = SubResource( 6 )

[node name="left_wall_raycast" type="RayCast2D" parent="."]
position = Vector2( -20, -30 )
enabled = true
cast_to = Vector2( -10, 0 )

[node name="right_wall_raycast" type="RayCast2D" parent="."]
position = Vector2( 20, -30 )
enabled = true
cast_to = Vector2( 10, 0 )

[node name="timer" type="Timer" parent="."]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
